implemented charts && data export
